tests/UnitTests/InvalidCommands/CommandNone.cs
using System;
using System.Collections.Generic;
using System.Text;

namespace UnitTests.InvalidCommands
{
    class CommandNone
    {
    }
}
